--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         android:id="@+id/btn_select_color"
         android:layout_gravity="center"
         android:layout_width="216dp"
-        android:visibility="visible"
+        android:visibility="gone"
         android:background="#b1f9b276"
         android:text="Select color"
         android:layout_height="48dp"/>
