UI improvement and new feature added
Change Log:
Added:
- UI improvement
- Added feature to save colored image.
- Load image resource from asset instead of drawable to fixed OutofMemory issue
- Allow user to pick image from asset images

Fixed:
- Removed Used code/resource
- Fixed app build issue
- Added Redo option. Previously only undo was there

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,18 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <array name="color_rainbow">
+        <item>@color/tomato</item>
+        <item>@color/tangerine</item>
+        <item>@color/banana</item>
+        <item>@color/basil</item>
+        <item>@color/sage</item>
+        <item>@color/peacock</item>
+        <item>@color/blueberry</item>
+        <item>@color/lavender</item>
+        <item>@color/grape</item>
+        <item>@color/flamingo</item>
+    </array>
+
 </resources>
