--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,40 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/white"
+            app:popupTheme="@style/AppTheme.PopupOverlay"/>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center">
+
+                <android.support.v7.widget.AppCompatImageView
+                    android:id="@+id/img_undo"
+                    style="@style/iconStyle"
+                    android:tint="@color/cyan_500"
+                    app:srcCompat="@drawable/ic_undo_black_48dp" />
+
+                <android.support.v7.widget.AppCompatImageView
+                    android:id="@+id/img_pick_color"
+                    style="@style/iconStyle"
+                    android:tint="@color/grey_700"
+                    app:srcCompat="@drawable/ic_touch_app_black_48dp" />
+
+                <android.support.v7.widget.AppCompatImageView
+                    android:id="@+id/img_redo"
+                    style="@style/iconStyle"
+                    android:tint="@color/cyan_500"
+                    app:srcCompat="@drawable/ic_redo_black_48dp" />
+
+            </LinearLayout>
+
+            <android.support.v7.widget.AppCompatImageView
+                android:id="@+id/img_save"
+                style="@style/iconStyle"
+                android:layout_alignParentEnd="true"
+                android:tint="@color/green_500"
+                app:srcCompat="@drawable/ic_check_circle_black_48dp" />
+
+        </RelativeLayout>
+
+    </RelativeLayout>
 
     <lakmalz.git.colouringimagefloodfill.TouchImageView
         android:id="@+id/ivImage"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:src="@drawable/one"/>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:gravity="center_horizontal"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/btn_select_color"
-            android:layout_gravity="center"
-            android:layout_width="216dp"
-            android:visibility="visible"
-            android:background="#b1f9b276"
-            android:text="Select color"
-            android:layout_height="48dp"/>
-        <Button
-            android:id="@+id/btn_redo"
-            android:layout_width="wrap_content"
-            android:text="Redo"
-            android:background="#b1f9492a"
-            android:layout_marginLeft="12dp"
-            android:layout_height="48dp"/>
-    </LinearLayout>
-
-
+        android:layout_margin="10dp"
+        />
 
 </LinearLayout>
