--- a/app/src/main/res/layout/dialog_screenshot.xml
+++ b/app/src/main/res/layout/dialog_screenshot.xml
@@ -8,6 +8,7 @@
     <android.support.v7.widget.AppCompatImageView
         android:id="@+id/img_screenshot"
         android:layout_width="match_parent"
+        android:padding="10dp"
         android:layout_height="0dp"
         android:layout_weight="1"/>
 
